# automata

./: .gitignore  CMakeLists.txt  automata.code-workspace
AController/: .gitignore  CMakeLists.txt
AController/lib/: CMakeLists.txt
AController/lib/libemail/: CMakeLists.txt
AController/lib/libhalf/: CMakeLists.txt
AController/lib/libhidapi/: CMakeLists.txt
AController/lib/libhttp/: CMakeLists.txt
AController/lib/libjson/: CMakeLists.txt
AController/src/: CMakeLists.txt
AController/src/AApplication/: CMakeLists.txt  Main.cpp
AController/src/ACommon/: AEndian.h  AError.h  ATypes.cpp  ATypes.h  CMakeLists.txt
AController/src/ACore/: AAddress.cpp  AAddress.h  ACEMIMessage.cpp  ACEMIMessage.h  ACEMIProtocol.h  ACore.cpp  ADataPoint.h  ADevice.cpp  ADeviceRelay.cpp  ADeviceRelay.h  ADeviceSwitch.cpp  ADeviceSwitch.h  AHIDProtocol.h  AHIDReport.h  CMakeLists.txt
ARelay/: ARelay.ino
Source/: CMakeLists.txt
Source/AApplication/: Main.cpp
Source/ACommon/: AError.cpp  AError.h  ATypes.cpp  ATypes.h  CMakeLists.txt
Source/ACore/: AAddress.cpp  AAddress.h  ACEMIMessage.cpp  ACEMIMessage.h  ACEMIProtocol.h  ACore.cpp  ACore.h  ADataPoint.cpp  ADataPoint.h  ADevice.cpp  ADevice.h  ADeviceSwitch.cpp  ADeviceSwitch.h  AHIDProtocol.cpp  AHIDProtocol.h  AHIDReport.cpp  AHIDReport.h  ATelegram.cpp  ATelegram.h  ATelegramPacket.cpp  ATelegramPacket.h  CMakeLists.txt
Source/Application/: CMakeLists.txt  Main.cpp
Source/Common/: CMakeLists.txt  Error.cpp  Error.h
Source/Core/: Address.cpp  Address.h  CMakeLists.txt  DataPoint.cpp  DataPoint.h  Device.cpp  Device.h  Telegram.cpp  Telegram.h  TelegramPacket.cpp  TelegramPacket.h
Source/Core/ACommon/: AError.cpp  ATypes.h  CMakeLists.txt
Source/Core/ACore/: AAddress.h  ACEMIMessage.h  ACEMIProtocol.cpp  ACEMIProtocol.h  ACore.h  ADataPoint.cpp  ADataPoint.h  AHIDReport.cpp  AHIDReport.h  CMakeLists.txt
Source/Core/ADevices/: ADeviceRelay.h  CMakeLists.txt
Source/Node/: CMakeLists.txt  package-lock.json  package.json
Source/Relay/: ARelay.ino
Source/RelayConfigurator/: ARelayConfiguratorDialog.cpp  ARelayConfiguratorDialog.ui  CMakeLists.txt
Source/Service/: CMakeLists.txt  Main.cpp
automata-app/: CMakeLists.txt
automata-app/run/: AApplication
automata-app/share/: automata.service
automata-app/src/: CMakeLists.txt  Main.cpp
automata-app/tools/: automata.service
automata-configurator/: .gitignore  CMakeLists.txt  automata-configurator.code-workspace
automata-configurator/src/: ARelayConfigurator.cpp  ARelayConfiguratorDialog.cpp  ARelayConfiguratorDialog.h  ARelayConfiguratorDialog.ui  CMakeLists.txt
automata-lib/: .gitignore  CMakeLists.txt
automata-lib/lib/: CMakeLists.txt
automata-lib/lib/libhalf/: CMakeLists.txt
automata-lib/lib/libhidapi/: CMakeLists.txt
automata-lib/lib/libhttp/: CMakeLists.txt  cmake_install.cmake
automata-lib/lib/libjson/: CMakeLists.txt  JSON.h
automata-lib/lib/liburlparser/: CMakeLists.txt  url_parser.c  url_parser.h
automata-lib/src/: CMakeLists.txt
automata-lib/src/ACommon/: AEndian.cpp  AEndian.h  CMakeLists.txt
automata-lib/src/ACore/: AAddress.cpp  ACEMIMessage.cpp  ACore.cpp  ACore.h  ADataPoint.cpp  ADevice.cpp  ADevice.h  AHIDProtocol.h  AHIDReport.cpp  CMakeLists.txt
automata-lib/src/ADevices/: ADeviceRelay.cpp  ADeviceSwitch.cpp  ADeviceSwitch.h  CMakeLists.txt
automata-node/: CMakeLists.txt  index.js
automata-node/src/: ACore.cpp  index.cpp
automata-relay/: ARelay.ino
