cmake_minimum_required(VERSION 3.10)

add_subdirectory(libhalf)
add_subdirectory(libhidapi)
add_subdirectory(libhttp)
add_subdirectory(libjson)
add_subdirectory(liburlparser)

#add_subdirectory(libemail)
#add_subdirectory(liburiparser)
#add_subdirectory(libopenssl)
#add_subdirectory(libcurl)
