cmake_minimum_required(VERSION 3.10)

add_library(ACore STATIC "")

target_sources(ACore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/AAddress.h)
target_sources(ACore PRIVATE AAddress.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ACore.h)
target_sources(ACore PRIVATE ACore.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ADataPoint.h)
target_sources(ACore PRIVATE ADataPoint.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/AHIDReport.h)
target_sources(ACore PRIVATE AHIDReport.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/AHIDProtocol.h)
target_sources(ACore PRIVATE AHIDProtocol.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ACEMIMessage.h)
target_sources(ACore PRIVATE ACEMIMessage.cpp)
target_sources(ACore PRIVATE ACEMIProtocol.h)
target_sources(ACore PRIVATE ACEMIProtocol.cpp)

target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ADevice.h)
target_sources(ACore PRIVATE ADevice.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ADeviceSwitch.h)
target_sources(ACore PRIVATE ADeviceSwitch.cpp)
target_sources(ACore PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/ADeviceRelay.h)
target_sources(ACore PRIVATE ADeviceRelay.cpp)

target_link_libraries(ACore libhidapi libhalf libhttp)

get_property(Sources TARGET ACore PROPERTY SOURCES)
source_group("" FILES ${Sources})