cmake_minimum_required(VERSION 3.10)

list(APPEND Headers AAddress.h)
list(APPEND Sources AAddress.cpp)
list(APPEND Headers ACore.h)
list(APPEND Sources ACore.cpp)
list(APPEND Headers ADataPoint.h)
list(APPEND Sources ADataPoint.cpp)
list(APPEND Headers AHIDReport.h)
list(APPEND Sources AHIDReport.cpp)
list(APPEND Headers AHIDProtocol.h)
list(APPEND Sources AHIDProtocol.cpp)
list(APPEND Headers ACEMIMessage.h)
list(APPEND Sources ACEMIMessage.cpp)
list(APPEND Headers ACEMIProtocol.h)
list(APPEND Sources ACEMIProtocol.cpp)
list(APPEND Headers ADevice.h)
list(APPEND Sources ADevice.cpp)

add_library(ACore STATIC ${Headers} ${Sources})
source_group("" FILES ${Headers} ${Sources})
target_link_libraries(ACore libhidapi libjson)

install(TARGETS ACore ARCHIVE DESTINATION lib)
install(FILES ${Headers} DESTINATION include/ACore)
